services/routing-demo/demo-a/destination_rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: account-orchestrator
  namespace: multi-tenant-namespace
spec:
  host: account-orchestrator
  subsets:
  - labels:
      version: 0.1.0
    name: resi
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: identity-domain-service
  namespace: multi-tenant-namespace
spec:
  host: identity-domain-service
  subsets:
  - labels:
      version: 0.1.0
    name: resi
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: account-domain-service
  namespace: multi-tenant-namespace
spec:
  host: account-domain-service
  subsets:
  - labels:
      version: 0.1.0
    name: resi
